# libs

./: .gitignore  README.md
angular-plugin/: README.md  addDataOnlookIdToAllTags.js  bun.lockb  index.spec.js  index.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.json
angular-plugin/demo/: package-lock.json
babel-plugin/: README.md  index.js  package-lock.json  package.json
babel-plugin/demo/: addDataOnlookIdReact.js  package-lock.json
babel-plugin/tests/: babel.test.js
demos/angular/: angular.json  bun.lockb  package-lock.json  package.json  preprocess-loader.js  preprocess.js  remove-attribute.js.js  webpack.config.js
demos/nextjs/: bun.lockb  next.config.mjs  package-lock.json  package.json
demos/react/: bun.lockb  package.json
demos/react-demo/: add-onlook-id-loader.js  config-overrides.js  package-lock.json  package.json
demos/svelte/: README.md  bun.lockb  package.json  svelte.config.js
demos/sveltekit/: bun.lockb  package-lock.json  package.json  svelte.config.js
demos/vue/: add-data-onlook-id-loader.js  (+3 more)
plugins/nextjs-swc/: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  package.json  swc_plugin_onlook_react.wasm
plugins/nextjs-swc/src/: lib.rs
plugins/nextjs-swc/transform/: Cargo.toml
plugins/nextjs-swc/transform/src/: lib.rs
plugins/nextjs-swc/transform/tests/: fixture.rs
react-plugin/: README.md
svelte-plugin/: README.md  bun.lockb  index.js  package.json
vue-plugin/: README.md  addDataOnlookIdToAllTagsVueFile.js  bun.lockb  index.js  jest.config.js  package-lock.json  package.json  vue.config.js
(+38 files in other folders)
